Upgrade to Java 21 and Gradle 8.14.3, use virtual threads